exports[`Welcome Reducer should return changed sim data 1`] = `
Object {
  "list": Array [
    Object {
      "number": "8901170425230326675",
      "status": "DEACTIVATED",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326676",
      "plan": "AT&T Data Rate Plan",
      "status": "SUSPENDED",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326677",
      "plan": "AT&T Data Rate Plan",
      "status": "PURGED",
    },
  ],
  "ui": Object {
    "selectedSims": Object {},
    "simEditModalOpen": false,
    "simStatusModalOpen": false,
  },
}
`;

exports[`Welcome Reducer should return changed sim edit modal state after toggle event 1`] = `
Object {
  "list": Array [
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326675",
      "plan": "AT&T Data Rate Plan",
      "status": "ACTIVE",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326676",
      "plan": "AT&T Data Rate Plan",
      "status": "SUSPENDED",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326677",
      "plan": "AT&T Data Rate Plan",
      "status": "PURGED",
    },
  ],
  "ui": Object {
    "selectedSims": Object {},
    "simEditModalOpen": true,
    "simStatusModalOpen": false,
  },
}
`;

exports[`Welcome Reducer should return changed sim scheduleData 1`] = `
Object {
  "list": Array [
    Object {
      "number": "8901170425230326675",
      "scheduleData": Object {
        "date": 1970-01-01T03:25:45.678Z,
      },
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326676",
      "plan": "AT&T Data Rate Plan",
      "status": "SUSPENDED",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326677",
      "plan": "AT&T Data Rate Plan",
      "status": "PURGED",
    },
  ],
  "ui": Object {
    "selectedSims": Object {},
    "simEditModalOpen": false,
    "simStatusModalOpen": false,
  },
}
`;

exports[`Welcome Reducer should return close sim status modal state after open event 1`] = `
Object {
  "list": Array [
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326675",
      "plan": "AT&T Data Rate Plan",
      "status": "ACTIVE",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326676",
      "plan": "AT&T Data Rate Plan",
      "status": "SUSPENDED",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326677",
      "plan": "AT&T Data Rate Plan",
      "status": "PURGED",
    },
  ],
  "ui": Object {
    "selectedSims": Object {},
    "simEditModalOpen": false,
    "simStatusModalOpen": false,
  },
}
`;

exports[`Welcome Reducer should return initial state 1`] = `
Object {
  "list": Array [
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326675",
      "plan": "AT&T Data Rate Plan",
      "status": "ACTIVE",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326676",
      "plan": "AT&T Data Rate Plan",
      "status": "SUSPENDED",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326677",
      "plan": "AT&T Data Rate Plan",
      "status": "PURGED",
    },
  ],
  "ui": Object {
    "selectedSims": Object {},
    "simEditModalOpen": false,
    "simStatusModalOpen": false,
  },
}
`;

exports[`Welcome Reducer should return open sim status modal state after open event 1`] = `
Object {
  "list": Array [
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326675",
      "plan": "AT&T Data Rate Plan",
      "status": "ACTIVE",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326676",
      "plan": "AT&T Data Rate Plan",
      "status": "SUSPENDED",
    },
    Object {
      "country": "USA",
      "network": "AT&T",
      "number": "8901170425230326677",
      "plan": "AT&T Data Rate Plan",
      "status": "PURGED",
    },
  ],
  "ui": Object {
    "selectedSims": Object {},
    "simEditModalOpen": false,
    "simStatusModalOpen": true,
  },
}
`;
